[metadata]
name = fritsi-py-utils
version = attr:fritsi.py.utils.__version__
description = A library containing various Python utilities
long_description = file:README.md
author = Daniel Fritsi
author_email = ffddani@gmail.com
license = BSD-3-Clause
license_files = LICENSE.md
url = https://github.com/fritsi/py-utils

keywords =
    python
    utils

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Source Code = https://github.com/fritsi/py-utils
    Bug Tracker = https://github.com/fritsi/py-utils/issues
    Documentation = https://github.com/fritsi/py-utils/blob/master/README.md

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
fritsi.py.utils = py.typed

[aliases]
dists = clean --all build sdist bdist_wheel

[bdist_wheel]
universal = 1
